# CE-BP-Project-Othello-game

./: .gitignore  CMakeLists.txt  cin.h  compile_flags.txt  main.c  out.txt  run.bat  test.c
.cache/clangd/index/: main.c.8FAABEEEAE558A36.idx  main.c.E771FD0A394330AA.idx
